tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/instanceip/wildcard_IP_with_empty_sidecar/_test_context/Sidecar.143449395.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Sidecar
metadata:
  name: sidecar
  namespace: echo-2-20468
spec:
  egress:
  - hosts:
    - ./*
  ingress:
  - defaultEndpoint: :18080
    port:
      number: 18080
      protocol: HTTP
  workloadSelector:
    labels:
      app: b
